--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -26,6 +26,9 @@
 
     "enterprise-line":"Enterprise",
     "home-line":"Home",
-    "car-line":"Car"
+    "car-line":"Car", 
+
+    "our-team":"Our team is committed to excellence ",
+    "nature":"We are committed to caring for the environment ambient"
 
 }
